syntax = "proto3";

package tiema.protocols.v1;

option csharp_namespace = "Tiema.Protocols.V1";

// 质量码（示例，可扩展）
enum QualityCode {
  QUALITY_UNKNOWN = 0;
  QUALITY_GOOD = 1;
  QUALITY_BAD = 2;
}

// Tag 角色
enum TagRole {
  TAG_ROLE_UNSPECIFIED = 0;
  TAG_ROLE_PRODUCER = 1;
  TAG_ROLE_CONSUMER = 2;
}

// 单个 Tag 值：handle 放在第一位，便于快速路由与三段式解析。
message TagValue {
  uint32 handle = 1; // 全局句柄（可按 rack/slot/tag 三段编码）

  string name = 2;
  int64 timestamp_unix_ms = 3;

  oneof value {
    bool bool_value = 4;
    int64 int_value = 5;
    double double_value = 6;
    string string_value = 7;
    bytes bytes_value = 8; // 原始二进制，便于零拷贝或自定义序列化
  }

  QualityCode quality = 9;
  TagRole role = 10; // 指明 Producer / Consumer
  string source_plugin_id = 11; // Producer 插件实例 ID（仅当 role=PRODUCER 有效）
  string reference_plugin_instance_id = 12; // Consumer 插件实例 ID（仅当 role=CONSUMER 时有效）
}

// 批量 Tag（用于 assembly/批量交换）
message TagBatch {
  string plugin_instance_id = 1; // 发送者实例 ID（可用于路由/审计）
  repeated TagValue tags = 2;
}

// Plugin 注册相关
message RegisterTagInfo {
  string source_plugin_instance_id = 1; // Producer 插件实例 ID（当 role=PRODUCER 有效）
  uint32 handle = 2; // 建议可选：如果插件提供 handle，则服务器可接受或重写
  string tag_name = 3;
  TagRole role = 4;
  string reference_plugin_instance_id = 5; // 当 role=CONSUMER 有效（引用的消费者实例）
}

message RegisterTagsRequest {
  string plugin_instance_id = 1;
  repeated RegisterTagInfo tags = 2; // 插件可以带 name / 建议的 handle（可选）
}

message RegisterTagsResponse {
  bool success = 1;
  repeated RegisterTagInfo assigned = 2; // 返回带 handle 的分配结果
  string message = 3;
}

// 订阅请求：兼容单句柄与批量订阅（assembly）
// - client 可使用 handle 单独订阅（向后兼容）
// - 或使用 tags 列表订阅多个 tag（用于 assembly）并带上 rpi_ms
message SubscribeRequest {
  uint32 handle = 1; // 向后兼容：单句柄订阅（可不填）
  repeated RegisterTagInfo tags = 2; // 批量/assembly 订阅（可跨进程一次性订阅多 tag）
  uint32 rpi_ms = 3; // 请求的周期（Requested Packet Interval）, 0 表示按更新触发
  string subscriber_id = 4; // 可选订阅者标识，用于服务器端管理
}

// 单句柄快捷请求（可选）
message SubscribeSingleRequest {
  uint32 handle = 1;
  string subscriber_id = 2;
}

// Publish / Get 请求/响应
message PublishRequest {
  TagValue tag = 1; // 建议使用 TagValue 原样发送，避免在背板层强制拆包
}

message PublishResponse {
  bool success = 1;
  string message = 2;
}

message GetRequest {
  uint32 handle = 1;
}

message GetResponse {
  bool found = 1;
  TagValue value = 2;
}

// Update 消息：Server->Client 的流式更新，可复用 TagValue 或 TagBatch
message Update {
  // 单条更新或批量更新（取决于实现与订阅类型）
  oneof payload {
    TagValue tag = 1;
    TagBatch batch = 2;
  }
}

